--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,6 @@ dependencies = [
     "dspy>=2.6.16",
     "litellm>=1.63.7",
     "matplotlib>=3.10.1",
+    "requests>=2.32.3",
+    "streamlit>=1.44.1",
 ]
