--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ aiosignal==1.3.2
     # via aiohttp
 alembic==1.15.2
     # via optuna
+altair==5.5.0
+    # via streamlit
 annotated-types==0.7.0
     # via pydantic
 anyio==4.9.0
@@ -28,8 +30,12 @@ attrs==25.3.0
     #   referencing
 backoff==2.2.1
     # via dspy
+blinker==1.9.0
+    # via streamlit
 cachetools==5.5.2
-    # via dspy
+    # via
+    #   dspy
+    #   streamlit
 certifi==2025.1.31
     # via
     #   httpcore
@@ -38,7 +44,9 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
     # via requests
 click==8.1.8
-    # via litellm
+    # via
+    #   litellm
+    #   streamlit
 cloudpickle==3.1.1
     # via dspy
 colorama==0.4.6
@@ -78,6 +86,10 @@ fsspec==2024.12.0
     # via
     #   datasets
     #   huggingface-hub
+gitdb==4.0.12
+    # via gitpython
+gitpython==3.1.44
+    # via streamlit
 greenlet==3.1.1
     # via sqlalchemy
 h11==0.14.0
@@ -101,7 +113,10 @@ idna==3.10
 importlib-metadata==8.6.1
     # via litellm
 jinja2==3.1.6
-    # via litellm
+    # via
+    #   altair
+    #   litellm
+    #   pydeck
 jiter==0.9.0
     # via openai
 joblib==1.4.2
@@ -109,7 +124,9 @@ joblib==1.4.2
 json-repair==0.40.0
     # via dspy
 jsonschema==4.23.0
-    # via litellm
+    # via
+    #   altair
+    #   litellm
 jsonschema-specifications==2024.10.1
     # via jsonschema
 kiwisolver==1.4.8
@@ -138,6 +155,8 @@ multidict==6.3.2
     #   yarl
 multiprocess==0.70.16
     # via datasets
+narwhals==1.33.0
+    # via altair
 numpy==2.2.4
     # via
     #   contourpy
@@ -146,6 +165,8 @@ numpy==2.2.4
     #   matplotlib
     #   optuna
     #   pandas
+    #   pydeck
+    #   streamlit
 openai==1.61.0
     # via
     #   dspy
@@ -154,22 +175,31 @@ optuna==4.2.1
     # via dspy
 packaging==24.2
     # via
+    #   altair
     #   datasets
     #   huggingface-hub
     #   matplotlib
     #   optuna
+    #   streamlit
 pandas==2.2.3
     # via
     #   datasets
     #   dspy
+    #   streamlit
 pillow==11.1.0
-    # via matplotlib
+    # via
+    #   matplotlib
+    #   streamlit
 propcache==0.3.1
     # via
     #   aiohttp
     #   yarl
+protobuf==5.29.4
+    # via streamlit
 pyarrow==19.0.1
-    # via datasets
+    # via
+    #   datasets
+    #   streamlit
 pydantic==2.11.2
     # via
     #   dspy
@@ -177,6 +207,8 @@ pydantic==2.11.2
     #   openai
 pydantic-core==2.33.1
     # via pydantic
+pydeck==0.9.1
+    # via streamlit
 pygments==2.19.1
     # via rich
 pyparsing==3.2.3
@@ -204,9 +236,11 @@ regex==2024.11.6
     #   tiktoken
 requests==2.32.3
     # via
+    #   commit-connect (pyproject.toml)
     #   datasets
     #   dspy
     #   huggingface-hub
+    #   streamlit
     #   tiktoken
 rich==14.0.0
     # via dspy
@@ -216,6 +250,8 @@ rpds-py==0.24.0
     #   referencing
 six==1.17.0
     # via python-dateutil
+smmap==5.0.2
+    # via gitdb
 sniffio==1.3.1
     # via
     #   anyio
@@ -224,12 +260,20 @@ sqlalchemy==2.0.40
     # via
     #   alembic
     #   optuna
+streamlit==1.44.1
+    # via commit-connect (pyproject.toml)
 tenacity==9.1.2
-    # via dspy
+    # via
+    #   dspy
+    #   streamlit
 tiktoken==0.9.0
     # via litellm
 tokenizers==0.21.1
     # via litellm
+toml==0.10.2
+    # via streamlit
+tornado==6.4.2
+    # via streamlit
 tqdm==4.67.1
     # via
     #   datasets
@@ -240,6 +284,7 @@ tqdm==4.67.1
 typing-extensions==4.13.1
     # via
     #   alembic
+    #   altair
     #   anyio
     #   huggingface-hub
     #   openai
@@ -247,6 +292,7 @@ typing-extensions==4.13.1
     #   pydantic-core
     #   referencing
     #   sqlalchemy
+    #   streamlit
     #   typing-inspection
 typing-inspection==0.4.0
     # via pydantic
@@ -256,10 +302,11 @@ ujson==5.10.0
     # via dspy
 urllib3==2.3.0
     # via requests
+watchdog==6.0.0
+    # via streamlit
 xxhash==3.5.0
     # via datasets
 yarl==1.18.3
     # via aiohttp
 zipp==3.21.0
     # via importlib-metadata
--e .
