--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "google-generativeai>=0.8.4",
     "litellm>=1.63.7",
     "matplotlib>=3.10.1",
+    "plotly>=6.0.1",
     "requests>=2.32.3",
     "streamlit>=1.44.1",
 ]
