--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 streamlit==1.44.1
     # via commit-connect (pyproject.toml)
 google-generativeai>=0.8.4
-
+plotly>=6.0.1
 aiohappyeyeballs==2.6.1
     # via aiohttp
 aiohttp==3.11.16
